--- a/InitialProject/composer.json
+++ b/InitialProject/composer.json
@@ -6,7 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
-        "barryvdh/laravel-dompdf": "^1.0",
+        "barryvdh/laravel-dompdf": "2.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -18,7 +18,9 @@
         "phattarachai/thaidate": "^12.1",
         "phpoffice/phpword": "^0.18.3",
         "renanbr/bibtex-parser": "^2.1",
+        "spatie/laravel-html": "^3.5",
         "spatie/laravel-permission": "^5.4",
+        "symfony/mailer": "^6.1",
         "symfony/process": "^5.4",
         "yajra/laravel-datatables-oracle": "^9.19"
     },
