--- a/InitialProject/.env
+++ b/InitialProject/.env
@@ -8,11 +8,11 @@ LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=192.185.83.226
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=cssegrou_academic_project
-DB_USERNAME=cssegrou_root
-DB_PASSWORD=Es^0MASZs?n5
+DB_DATABASE=example_app
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
