--- a/SourceCodeVersion_1/composer.json
+++ b/SourceCodeVersion_1/composer.json
@@ -18,10 +18,13 @@
         "phattarachai/thaidate": "^12.1",
         "phpoffice/phpword": "^0.18.3",
         "renanbr/bibtex-parser": "^2.1",
+        "serpapi/google-search-results-php": "^1.2",
         "spatie/laravel-html": "^3.5",
         "spatie/laravel-permission": "^5.4",
+        "symfony/http-client": "^6.2",
         "symfony/mailer": "^6.1",
         "symfony/process": "^5.4",
+        "vlucas/phpdotenv": "^5.6",
         "yajra/laravel-datatables-oracle": "^9.19"
     },
     "require-dev": {
